@@ -3,7 +3,7 @@ package de.tum.cit.aet.web.rest;
 import de.tum.cit.aet.service.UserService;
 import de.tum.cit.aet.service.dto.UserDTO;
 import java.util.*;
-import java.util.Collections;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.Page;
@@ -20,9 +20,7 @@ import tech.jhipster.web.util.PaginationUtil;
 @RequestMapping("/api")
 public class PublicUserResource {
 
-    private static final List<String> ALLOWED_ORDERED_PROPERTIES = Collections.unmodifiableList(
-        Arrays.asList("id", "login", "firstName", "lastName", "email", "activated", "langKey")
-    );
+    private static final List<String> ALLOWED_ORDERED_PROPERTIES = List.of("id", "login", "firstName", "lastName", "email", "activated", "langKey");
 
     private final Logger log = LoggerFactory.getLogger(PublicUserResource.class);
 
